style/style.css
:root {
  --primary-color: #ffffff;
  /* text*/
  --secondary-color: #e8e9ff;
  /* daytime light*/
  --tertiary-color: #8589ff;
  /* daytime Dark*/
  --quaternary-color: #757aff;
  /* Button */
  --quinary-color: #6264a2;
  /* night light*/
  --senary-color: #222350;
  /* night dark*/
  --septenary-color: #000000;
  /* */
  --primary-font: "Roboto", sans-serif;
  --secondary-font: "Open Sans", sans-serif;
  overflow: hidden;
}

body {
  font-family: var(--primary-font);
  background: linear-gradient(45deg,
      rgba(133, 137, 255, 1) 50%,
      rgba(232, 233, 255, 1) 100%);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: var(--primary-color);
  margin: 0;
}

.night {
  font-family: var(--primary-font);
  background: linear-gradient(45deg,
      rgba(34, 35, 80, 1) 50%,
      rgba(98, 100, 163, 1) 100%);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: var(--primary-color);
  margin: 0;
}

h1 {
  font-size: 5rem;
  font-weight: 300;
  margin: 0;
  justify-self: start;
  /* width: 80vmax; */
}

h2 {
  font-size: 2.125rem;
  font-weight: 300;
  margin: 0;
}

h3 {
  font-size: .75rem;
  font-weight: 100;
  margin: 0;
}

sup {
  font-size: 2rem;
}

.desktop {
  display: flex;
  flex-direction: column;

  align-content: center;
  align-items: center;
  width: 100%;
}

nav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  box-sizing: border-box;
  width: 100dvw;
  align-items: center;
}

.search-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 1rem 0.5rem 0rem 0.5rem;
  align-items: center;
  gap: 0.5rem;
  transition: transform 0.3s ease;
  width: min-content;
  max-width: 475px;
}

#city-input {
  flex: 1;
  text-indent: 1rem;
  border: none;
  outline: none;
  border-radius: 20px;
  background: rgba(255, 255, 255, 0.4);
  color: rgba(34, 35, 80, 0.6);
  font-size: .75rem;
  font-family: var(--primary-font);
  width: 65dvw;
  padding: .5rem;
}

#city-input::placeholder {
  color: rgba(98, 100, 162, 0.5);
}

#search-btn {
  padding: 0.5rem 0.5rem;
  border: none;
  border-radius: 20px;
  background: rgba(255, 255, 255, 0.4);
  color: var(--text-color);
  cursor: pointer;
  transition: background 0.2s ease;
  font-family: var(--primary-font);
  font-size: .75rem;
  color: rgba(34, 35, 80, 0.4);
}

#search-btn:hover {
  background: rgba(255, 255, 255, 0.4);
}

.top-forecast {
  display: flex;
  flex-direction: column;
  row-gap: 0.5em;
  margin-bottom: 2rem;
  margin-top: 5dvh;
}

.sun-posititon {
  row-gap: .75rem;
}

.forecast {
  padding: 1em;
  display: flex;
  flex-direction: column;
  width: 80dvw;
  flex: 1;
  box-sizing: border-box;
  max-width: 475px;
}

.daily-forecast {
  background-color: transparent;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  height: 50dvh;
  width: 50dvw;
}

#forecast-icon {
  display: flex;
  flex-direction: row;
  justify-content: end;
  box-sizing: border-box;
}

#forecast-icon>img {
  object-fit: contain;
  background: none;
  height: 7rem;
  width: auto;
}

#weekly-forecast {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  color: var(--septenary-color);
  background-color: var(--primary-color);
  height: 50dvh;
  width: 100vw;
  text-decoration: none;
  box-sizing: border-box;
  padding: 1rem;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  max-width: 475px;
}

.weather-temp {
  display: inline-flex;
  align-items: center;
  height: fit-content;
  column-gap: .5rem;
}

.weather-temp img {
  height: 25px;
  width: auto;
}

ul {
  width: 100%;
  height: 100%;
  padding-top: 2rem;
  padding: 0;
  margin: 0;
  row-gap: 2rem;
}

li {
  display: flex;
  flex-direction: row;
  align-content: center;
  align-items: center;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  flex-grow: 1;
  height: 20%;
  font-weight: 100;
}

.toggle-forecast,
.toggle-forecast-hide {
  transition: transform .7s ease;
}

.toggle-forecast {
  transform: translateY(10dv);
}

.toggle-forecast-hide {
  transform: translateY(100dvh);
}

.toggle-forecast-show {
  transform: translateY(0dvh);
}


/* slow loading */ 
.loader {
  border: 8px solid rgba(255, 255, 255, 0.3);
  border-top: 16px solid blue;
  border-right: 16px solid green;
  border-bottom: 16px solid red;
  border-left: 16px solid pink;
  border-radius: 50%;
  width: 100px;
  height: 100px;
  animation: spin 3s linear infinite;
  margin: auto;
  display: none; /* Hide loader by default */
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
/* Show loader when loading class is added */
.loading .loader {
  display: block;
}
  
.compact {
  padding: 1em;
  display: flex;
  flex-direction: column;
  width: 100%;
  flex: 1;
  box-sizing: border-box;
  max-width: 475px;
  height: 50dvh;
  transform: scale(0.80)translateY(-2.5rem);
  margin: 0 auto;
}

.compact-sun {
  display: flex;
  flex-direction: row;
  column-gap: 2rem;
  margin-top: none;
}

.sunrise {
  display: inline;
}

#toggle-btn {
  position: absolute;
  right: 10%;
  bottom: 5dvh;
  aspect-ratio: 1 - 1;
  height: 50px;
  width: 50px;
  border-radius: 100px;
  background-color: rgb(98, 100, 162);
  font-size: 1.2rem;
  color: white;
  border: none;
  z-index: 2;
}

#toggle-btn:hover {
  background-color: rgb(98, 100, 162);
  transform: scale(1.05);
}

.btn-shift {
  top: 50dvh;
}

